# config-change-validation-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/current/: controller_01.yaml  ran_cell_001.yaml  router_site_a.yaml
configs/planned/: controller_01.yaml  ran_cell_001.yaml  router_site_a.yaml
docs/: design_tradeoffs.md  interview_notes.md
docs/assets/: cli-output-router-site-a.txt  router-site-a-report-preview.md
examples/: rollback_checklist.md
reports/: controller_01_change_report.md  ran_cell_001_change_report.md  sample_change_report.md
rules/: network_rules.yaml  ran_rules.yaml  system_rules.yaml
src/change_validator/: __init__.py  __main__.py  checklist.py  cli.py  diff_engine.py  parser.py  report_generator.py  risk_score.py  rule_engine.py
tests/: test_checklist.py  test_cli.py  test_diff_engine.py  test_parser.py  test_report_generator.py  test_risk_score.py  test_rule_engine.py
