[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "config-change-validation-tool"
version = "0.1.0"
description = "Rule-driven configuration change validation for synthetic network, RAN, and system examples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "PyYAML>=6.0",
  "tabulate>=0.9",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
change-validator = "change_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
