[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "config-change-validation-tool"
version = "0.1.0"
description = "Rule-driven configuration change validation CLI for network, RAN-like, and industrial system examples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "PyYAML>=6.0",
  "tabulate>=0.9",
]

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pandas-stubs>=3.0.0.260204",
  "pytest>=8.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.14",
  "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
change-validator = "change_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["src/change_validator"]
pretty = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["src/change_validator"]

[tool.coverage.report]
show_missing = true
skip_empty = true
